# shingari-old

./: .gitignore  CREDITS  Cargo.toml  LICENSE  README.md
.fleet/: run.json
.github/workflows/: main.yml
src/: fs.rs  main.rs  models.rs  path.rs
