[package]
name = "process-end-slack-notifier"
version = "0.1.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pesn"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "3.0.1"
sysinfo = "0.17.1"
chrono = "0.4.19"
http = "0.2.4"
clap = "2.33"
